--- a/core/template/mobile/eqLogic.html
+++ b/core/template/mobile/eqLogic.html
@@ -7,10 +7,10 @@
 	<span class="cmd cmd-widget" data-cmd_id="#cmd_loadimage_id#" style="display:none;"></span>
 	<span class="cmd cmd-widget" data-cmd_id="#cmd_sendtext_id#" style="display:none;"></span>
       <center>
-        <a class="ui-btn ui-mini ui-btn-inline ui-btn-b cmd blackscreen" data-cmd_id="#cmd_blackscreen_id#"><i class="fa fa-power-off"></i></a>
-		<a class="ui-btn ui-mini ui-btn-inline ui-btn-b sendtext" id="bt_sendtext#uid#"><i class="fa fa-share-square-o"></i></a>
-      <div style="width:30%"><input class="name form-control" id="texte" type='text' style="margin-top:5px;"/></div>
-	  <div class="listImage" style="width:75%"><select class="memoryload form-control" style="margin-top:5px;">
+        <a class="ui-btn ui-mini ui-btn-inline ui-btn-b cmd blackscreen#uid#" data-cmd_id="#cmd_blackscreen_id#"><i class="fa fa-power-off"></i></a>
+		<a class="ui-btn ui-mini ui-btn-inline ui-btn-b sendtext#uid#" id="bt_sendtext#uid#"><i class="fa fa-share-square-o"></i></a>
+      <div style="width:30%"><input class="name#uid# form-control" id="texte" type='text' style="margin-top:5px;"/></div>
+	  <div class="listImage#uid#" style="width:75%"><select class="memoryload#uid# form-control" style="margin-top:5px;">
 		</select></div>
      </center>
     </div>
@@ -23,14 +23,14 @@
 			for(var i in loadimage#id#){
 				loadloadimage#id# += '<option value="' + loadimage#id#[i] + '">' + loadimage#id#[i].charAt(0).toUpperCase() + loadimage#id#[i].slice(1) + '</option>';
 			}
-			$(".dotti[data-eqLogic_uid=#uid#] .memoryload").append(loadloadimage#id#);
+			$(".dotti[data-eqLogic_uid=#uid#] .memoryload#uid#").append(loadloadimage#id#);
 		}
-	$('.dotti[data-eqLogic_uid=#uid#] .memoryload').on('change',function(){
+	$('.dotti[data-eqLogic_uid=#uid#] .memoryload#uid#').on('change',function(){
 		jeedom.cmd.execute({id: '#cmd_loadimage_id#', value: {'message': $(this).value()}});
 	});
 	$('#bt_sendtext#uid#').on('click',function(){
-		console.log($('.name').val());
-		jeedom.cmd.execute({id: '#cmd_sendtext_id#', value: {'message': $('.name').val()}});
+		console.log($('.name#uid#').val());
+		jeedom.cmd.execute({id: '#cmd_sendtext_id#', value: {'message': $('.name#uid#').val()}});
 	});
 	
    $('.eqLogic[data-eqLogic_uid=#uid#] .cmd').on('click', function() {
