--- a/core/template/dashboard/eqLogic.html
+++ b/core/template/dashboard/eqLogic.html
@@ -18,7 +18,7 @@
 	<span class="cmd cmd-widget" data-cmd_id="#cmd_sendcolor_id#" style="display:none;"></span>
       <center>
 	    <label class="fa fa-circle pixelCircle#uid#" style="color : #000000;font-size:2.2em; cursor: pointer;"><input class="pixelcolor#uid#" type="color" value="#000000" style="width:0;height:0;visibility:hidden"/></label>
-        <a class="btn btn-default btn-circle btn-xs cmd blackscreen#uid#" data-cmd_id="#cmd_blackscreen_id#" title="Eteindre" style="margin-top:-15px"><i class="fa fa-power-off"></i></a>
+        <a class="btn btn-default btn-circle btn-xs cmd blackscreen#uid#" data-cmd_id="#cmd_blackscreen_id#" title="Eteindre" style="margin-top:-15px;margin-left:-7px;"><i class="fa fa-power-off"></i></a>
 		<a class="btn btn-default btn-circle btn-xs picture#uid#" id="bt_dottiScreen#uid#" title="Dessiner" style="margin-top:-15px"><i class="fa fa-paint-brush"></i></a></br>
 		<a class="btn btn-default btn-circle btn-xs sendtext#uid#" id="bt_sendtext#uid#" title="Envoyer Texte" style="margin-top:-1px"><i class="fa fa-share-square-o"></i></a>
       <input class="name#uid# form control" id="texte" type="text" style="width:30%;color:#cmdColor#;border-radius: 10px;"/>
